changing the favicon

--- a/public/about.html
+++ b/public/about.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us | Interior Design Kenya</title>
+    <title>About Us | Interiors By Tiffi Limited</title>
 
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/output.css" />
+
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/images/logo-tifi.ico"
+    />
   </head>
 
   <body class="bg-idcBackground text-idcText font-idcSans">
