--- a/public/admin.html
+++ b/public/admin.html
@@ -6,6 +6,11 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="/output.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/images/logo-tifi.ico"
+    />
   </head>
   <body class="bg-idcBackground text-idcText font-idcSans">
     <!-- Dashboard Header -->
