--- a/public/orders.html
+++ b/public/orders.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Orders</title>
     <link rel="stylesheet" href="/output.css" />
+
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/images/logo-tifi.ico"
+    />
   </head>
   <body class="bg-idcBackground text-idcText font-idcSans">
     <!-- Header -->
