--- a/public/signup.html
+++ b/public/signup.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
     <link rel="stylesheet" href="/output.css" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/images/logo-tifi.ico"
+    />
   </head>
   <body class="bg-gray-100 font-sans text-gray-800">
     <div class="min-h-screen flex items-center justify-center">
