--- a/public/blog.html
+++ b/public/blog.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <title>Blog Post | Interior Design Kenya</title>
+    <title>Blog Post | Interiors By Tiffi Limited</title>
 
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/output.css" />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/styles.css" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/images/logo-tifi.ico"
+    />
   </head>
   <body class="bg-idcBackground text-idcText font-idcSans">
     <!-- Navbar -->
