--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Interior Design Kenya | Transforming Spaces</title>
+    <title>Interiors By Tiffi Limited | Transforming Spaces</title>
 
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/output.css" />
 
     <!-- custom css -->
     <link rel="stylesheet" href="/styles.css" />
+
+    <!-- adding an ico -->
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/images/logo-tifi.ico"
+    />
   </head>
 
   <body class="bg-idcBackground text-idcText font-idcSans">
