--- a/public/login.html
+++ b/public/login.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="/output.css" />
     <link rel="stylesheet" href="/styles.css" />
 
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/images/logo-tifi.ico"
+    />
+
     <title>Login</title>
   </head>
   <body class="bg-gray-100 font-sans text-gray-800">
