--- a/public/products.html
+++ b/public/products.html
@@ -13,6 +13,11 @@
     />
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/images/logo-tifi.ico"
+    />
   </head>
   <body class="bg-idcBackground text-idcText font-idcSans">
     <!-- Navbar -->
