--- a/public/tracking.html
+++ b/public/tracking.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Order Tracking</title>
     <link rel="stylesheet" href="/output.css" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/images/logo-tifi.ico"
+    />
   </head>
   <body class="bg-idcBackground font-idcSans text-idcText">
     <!-- Header -->
