changing the logo

--- a/public/about.html
+++ b/public/about.html
@@ -21,9 +21,14 @@
       <div
         class="container mx-auto flex items-center justify-between py-4 px-6"
       >
-        <a href="/" class="text-xl font-bold text-idcPrimary"
-          >Interior Design</a
-        >
+        <!-- Logo -->
+        <a href="/" class="text-xl font-bold text-idcPrimary">
+          <img
+            src="/images/logo-tifi.png"
+            alt="Interior Design Logo"
+            class="h-8"
+          />
+        </a>
         <nav class="hidden md:flex space-x-6">
           <a
             href="/"
@@ -183,7 +188,7 @@
     <!-- Footer -->
     <footer class="bg-idcBackground text-center py-4">
       <p class="text-idcText">
-        © 2024 Interior Design Kenya. All Rights Reserved.
+        © 2024 Interiors By Tiffi Limited. All Rights Reserved.
       </p>
     </footer>
 
