--- a/public/blog.html
+++ b/public/blog.html
@@ -24,8 +24,13 @@
       <div
         class="container mx-auto flex items-center justify-between py-4 px-6"
       >
-        <a href="/" class="text-2xl font-idcSerif text-idcPrimary">
-          Interior Design
+        <!-- Logo -->
+        <a href="/" class="text-xl font-bold text-idcPrimary">
+          <img
+            src="/images/logo-tifi.png"
+            alt="Interior Design Logo"
+            class="h-8"
+          />
         </a>
         <div id="mobile-nav" class="hidden md:flex space-x-8">
           <a href="/" class="hover:text-idcHighlight">Home</a>
@@ -45,9 +50,9 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-idcAccent text-center py-4 mt-10">
+    <footer class="bg-idcBackground text-center py-4">
       <p class="text-idcText">
-        © 2024 Interior Design Kenya. All Rights Reserved.
+        © 2024 Interiors By Tiffi Limited. All Rights Reserved.
       </p>
     </footer>
 
