--- a/public/checkout.html
+++ b/public/checkout.html
@@ -17,16 +17,12 @@
       class="checkout-header bg-white shadow-md p-4 flex items-center justify-between"
     >
       <div class="flex items-center">
-        <a href="/">
+        <!-- Logo -->
+        <a href="/" class="text-xl font-bold text-idcPrimary">
           <img
-            class="hidden lg:block h-8"
-            src="/images/amazon-log.png"
-            alt="Your logo"
-          />
-          <img
-            class="block lg:hidden h-8"
-            src="/images/amazon-mobile-log.png"
-            alt="Your logo"
+            src="/images/logo-tifi.png"
+            alt="Interior Design Logo"
+            class="h-8"
           />
         </a>
       </div>
@@ -135,6 +131,12 @@
         </div>
       </div>
     </div>
+
+    <footer class="bg-idcBackground text-center py-4">
+      <p class="text-idcText">
+        © 2024 Interiors By Tiffi Limited. All Rights Reserved.
+      </p>
+    </footer>
 
     <script type="module" src="/scripts/checkout.js"></script>
   </body>
