--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,13 @@
         class="container mx-auto flex items-center justify-between py-4 px-6"
       >
         <!-- Logo -->
-        <a href="/" class="text-xl font-bold text-idcPrimary"
-          >Interior Design</a
-        >
+        <a href="/" class="text-xl font-bold text-idcPrimary">
+          <img
+            src="/images/logo-tifi.png"
+            alt="Interior Design Logo"
+            class="h-8"
+          />
+        </a>
 
         <!-- Navigation Links with Font Awesome icons -->
         <nav id="mobile-nav" class="hidden md:flex space-x-8">
@@ -476,9 +480,10 @@
       </div>
     </section>
 
+    <!-- Footer -->
     <footer class="bg-idcBackground text-center py-4">
       <p class="text-idcText">
-        © 2024 Interior Design Kenya. All Rights Reserved.
+        © 2024 Interiors By Tiffi Limited. All Rights Reserved.
       </p>
     </footer>
 
