--- a/public/orders.html
+++ b/public/orders.html
@@ -16,11 +16,12 @@
     <!-- Header -->
     <header class="bg-white shadow-md p-4 flex items-center justify-between">
       <div class="flex items-center">
-        <a href="/">
+        <!-- Logo -->
+        <a href="/" class="text-xl font-bold text-idcPrimary">
           <img
-            class="hidden lg:block h-8"
-            src="/images/kenya-furniture-logo.png"
-            alt="Kenya Furniture Hub"
+            src="/images/logo-tifi.png"
+            alt="Interior Design Logo"
+            class="h-8"
           />
         </a>
       </div>
@@ -45,6 +46,13 @@
         </div>
       </div>
     </main>
+
+    <!-- Footer -->
+    <footer class="bg-idcBackground text-center py-4">
+      <p class="text-idcText">
+        © 2024 Interiors By Tiffi Limited. All Rights Reserved.
+      </p>
+    </footer>
 
     <script type="module" src="/scripts/orders.js"></script>
   </body>
