--- a/public/products.html
+++ b/public/products.html
@@ -25,9 +25,14 @@
       <div
         class="container mx-auto flex items-center justify-between py-4 px-6"
       >
-        <a href="/" class="text-2xl font-bold text-idcPrimary"
-          >Interior Design</a
-        >
+        <!-- Logo -->
+        <a href="/" class="text-xl font-bold text-idcPrimary">
+          <img
+            src="/images/logo-tifi.png"
+            alt="Interior Design Logo"
+            class="h-8"
+          />
+        </a>
 
         <!-- Search Bar -->
         <div class="flex items-center w-full lg:w-auto flex-grow max-w-2xl">
@@ -170,9 +175,10 @@
     <!-- Categories Container -->
     <div id="categories-container"></div>
 
+    <!-- Footer -->
     <footer class="bg-idcBackground text-center py-4">
       <p class="text-idcText">
-        © 2024 Interior Design Kenya. All Rights Reserved.
+        © 2024 Interiors By Tiffi Limited. All Rights Reserved.
       </p>
     </footer>
 
