--- a/public/portfolio-details.html
+++ b/public/portfolio-details.html
@@ -12,6 +12,12 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/styles.css" />
+    <!-- adding an ico -->
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/images/logo-tifi.ico"
+    />
   </head>
   <body class="bg-idcBackground text-idcText font-idcSans">
     <!-- Navbar -->
@@ -19,9 +25,14 @@
       <div
         class="container mx-auto flex items-center justify-between py-4 px-6"
       >
-        <a href="/" class="text-xl font-bold text-idcPrimary"
-          >Interior Design</a
-        >
+        <!-- Logo -->
+        <a href="/" class="text-xl font-bold text-idcPrimary">
+          <img
+            src="/images/logo-tifi.png"
+            alt="Interior Design Logo"
+            class="h-8"
+          />
+        </a>
         <nav id="mobile-nav" class="hidden md:flex space-x-8">
           <a href="/" class="hover:text-idcPrimary">Home</a>
           <a href="/#services" class="hover:text-idcPrimary">Services</a>
