smooth scroll to the category products

--- a/public/index.html
+++ b/public/index.html
@@ -261,7 +261,7 @@
         <!-- Lead Magnet Image -->
         <div>
           <img
-            src="/images/forest view gardens/guide.jpg"
+            src="/images/guide.jpg"
             alt="Interior Design Guide"
             class="rounded-lg shadow-lg"
             loading="lazy"
