--- a/public/products.html
+++ b/public/products.html
@@ -75,10 +75,8 @@
         <li class="category-item active" data-category="beddings">Beddings</li>
         <li class="category-item" data-category="furniture">Furniture</li>
         <li class="category-item" data-category="pillows">Pillows</li>
-        <li class="category-item" data-category="curtains">
-          Curtains & Sheers
-        </li>
-        <li class="category-item" data-category="others">Others</li>
+        <li class="category-item" data-category="decor">Decor</li>
+        <li class="category-item" data-category="bath">Bath</li>
       </ul>
     </nav>
 
