fixing the sidebar

--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us | Interiors By Tiffi Limited</title>
+    <title>About Us | Interiors By Tifi Limited</title>
 
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/output.css" />
@@ -188,7 +188,7 @@
     <!-- Footer -->
     <footer class="bg-idcBackground text-center py-4">
       <p class="text-idcText">
-        © 2024 Interiors By Tiffi Limited. All Rights Reserved.
+        © 2024 Interiors By Tifi Limited. All Rights Reserved.
       </p>
     </footer>
 
