--- a/public/checkout.html
+++ b/public/checkout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Checkout | Interiors By Tiffi Limited</title>
+    <title>Checkout | Interiors By Tifi Limited</title>
     <link rel="stylesheet" href="/output.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link
@@ -134,7 +134,7 @@
 
     <footer class="bg-idcBackground text-center py-4">
       <p class="text-idcText">
-        © 2024 Interiors By Tiffi Limited. All Rights Reserved.
+        © 2024 Interiors By Tifi Limited. All Rights Reserved.
       </p>
     </footer>
 
