rendering products with consultative prices

--- a/public/products.html
+++ b/public/products.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Products | Interior Design Kenya</title>
+    <title>Products | Interiors By Tifi Limited</title>
     <link rel="stylesheet" href="/output.css" />
     <link rel="stylesheet" href="/styles.css" />
     <!-- Swiper CSS -->
@@ -176,7 +176,7 @@
     <!-- Footer -->
     <footer class="bg-idcBackground text-center py-4">
       <p class="text-idcText">
-        © 2024 Interiors By Tiffi Limited. All Rights Reserved.
+        © 2024 Interiors By Tifi Limited. All Rights Reserved.
       </p>
     </footer>
 
