--- a/public/signup.html
+++ b/public/signup.html
@@ -3,112 +3,117 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
+    <title>Sign Up | Interiors by Tifi Limited</title>
+
+    <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/output.css" />
+
+    <!-- Favicon -->
     <link
       rel="shortcut icon"
       type="image/x-icon"
       href="/images/logo-tifi.ico"
     />
   </head>
-  <body class="bg-gray-100 font-sans text-gray-800">
-    <div class="min-h-screen flex items-center justify-center">
-      <div class="bg-white p-8 rounded shadow-lg w-full max-w-md">
-        <h1 class="text-2xl font-bold text-blue-600 text-center mb-6">
-          Sign Up
-        </h1>
-        <form id="signupForm" class="space-y-4">
-          <!-- Name Field -->
-          <div>
-            <label for="name" class="block text-sm font-medium text-gray-700"
-              >Name</label
-            >
-            <input
-              type="text"
-              id="name"
-              placeholder="Enter your name"
-              required
-              class="w-full px-4 py-2 mt-1 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
-            />
-          </div>
-          <!-- Email Field -->
-          <div>
-            <label for="email" class="block text-sm font-medium text-gray-700"
-              >Email</label
-            >
-            <input
-              type="email"
-              id="email"
-              placeholder="Enter your email"
-              required
-              class="w-full px-4 py-2 mt-1 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
-            />
-          </div>
-          <!-- Password Field -->
-          <div>
-            <label
-              for="password"
-              class="block text-sm font-medium text-gray-700"
-              >Password</label
-            >
-            <div class="relative">
-              <input
-                type="password"
-                id="password"
-                placeholder="Create a password"
-                required
-                class="w-full px-4 py-2 mt-1 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
-              />
-              <button
-                type="button"
-                id="togglePassword"
-                class="absolute inset-y-0 right-3 text-gray-500 focus:outline-none"
-              >
-                Show
-              </button>
-            </div>
-          </div>
-          <!-- Confirm Password Field -->
-          <div>
-            <label
-              for="confirmPassword"
-              class="block text-sm font-medium text-gray-700"
-              >Confirm Password</label
-            >
-            <div class="relative">
-              <input
-                type="password"
-                id="confirmPassword"
-                placeholder="Confirm your password"
-                required
-                class="w-full px-4 py-2 mt-1 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
-              />
-              <button
-                type="button"
-                id="toggleConfirmPassword"
-                class="absolute inset-y-0 right-3 text-gray-500 focus:outline-none"
-              >
-                Show
-              </button>
-            </div>
-          </div>
-          <!-- Submit Button -->
-          <button
-            type="submit"
-            class="w-full py-2 px-4 bg-blue-600 text-white font-bold rounded hover:bg-blue-700 focus:outline-none"
-            name="submit"
+  <body
+    class="bg-idcBackground text-idcText font-idcSans flex items-center justify-center min-h-screen relative bg-cover bg-center"
+    style="background-image: url('/images/interior-bg.jpg')"
+  >
+    <!-- Background Overlay -->
+    <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+
+    <!-- Signup Container -->
+    <div
+      class="relative bg-white bg-opacity-30 backdrop-blur-lg shadow-xl rounded-xl p-8 w-full max-w-md"
+    >
+      <h1 class="text-3xl font-idcSerif text-idcPrimary text-center mb-6">
+        Sign Up
+      </h1>
+
+      <form id="signupForm" class="space-y-4">
+        <div>
+          <label for="name" class="block text-sm font-medium">Name</label>
+          <input
+            type="text"
+            id="name"
+            placeholder="Enter your name"
+            required
+            class="w-full px-4 py-2 mt-1 border rounded focus:ring-2 focus:ring-idcHighlight bg-idcAccent"
+          />
+        </div>
+
+        <div>
+          <label for="email" class="block text-sm font-medium">Email</label>
+          <input
+            type="email"
+            id="email"
+            placeholder="Enter your email"
+            required
+            class="w-full px-4 py-2 mt-1 border rounded focus:ring-2 focus:ring-idcHighlight bg-idcAccent"
+          />
+        </div>
+
+        <div>
+          <label for="password" class="block text-sm font-medium"
+            >Password</label
           >
-            Sign Up
-          </button>
-        </form>
-        <p class="text-center mt-4">
-          Already have an account?
-          <a href="/login.html" class="text-blue-600 hover:underline">Login</a>
-        </p>
-      </div>
+          <div class="relative">
+            <input
+              type="password"
+              id="password"
+              placeholder="Create a password"
+              required
+              class="w-full px-4 py-2 mt-1 border rounded focus:ring-2 focus:ring-idcHighlight bg-idcAccent"
+            />
+            <button
+              type="button"
+              id="togglePassword"
+              class="absolute inset-y-0 right-3 text-idcText focus:outline-none"
+            >
+              Show
+            </button>
+          </div>
+        </div>
+
+        <div>
+          <label for="confirmPassword" class="block text-sm font-medium"
+            >Confirm Password</label
+          >
+          <div class="relative">
+            <input
+              type="password"
+              id="confirmPassword"
+              placeholder="Confirm your password"
+              required
+              class="w-full px-4 py-2 mt-1 border rounded focus:ring-2 focus:ring-idcHighlight bg-idcAccent"
+            />
+            <button
+              type="button"
+              id="toggleConfirmPassword"
+              class="absolute inset-y-0 right-3 text-idcText focus:outline-none"
+            >
+              Show
+            </button>
+          </div>
+        </div>
+
+        <button
+          type="submit"
+          class="w-full py-2 bg-idcHighlight text-black font-bold rounded-lg hover:bg-opacity-80 transition"
+        >
+          Sign Up
+        </button>
+      </form>
+
+      <p class="text-center mt-4">
+        Already have an account?
+        <a href="/login.html" class="text-idcHighlight hover:underline"
+          >Login</a
+        >
+      </p>
     </div>
+
     <script src="/scripts/register.js" type="module"></script>
     <script src="/scripts/togglePassword.js"></script>
-    <!-- Load togglePassword.js script -->
   </body>
 </html>
