--- a/public/login.html
+++ b/public/login.html
@@ -32,7 +32,7 @@
 
       <form id="loginForm" class="space-y-4">
         <div>
-          <label for="email" class="block text-sm font-medium">Email</label>
+          <label for="email" class="block text-m font-bold">Email</label>
           <input
             type="email"
             id="email"
@@ -43,9 +43,7 @@
         </div>
 
         <div>
-          <label for="password" class="block text-sm font-medium"
-            >Password</label
-          >
+          <label for="password" class="block text-m font-bold">Password</label>
           <div class="relative">
             <input
               type="password"
