--- a/public/signup.html
+++ b/public/signup.html
@@ -32,7 +32,7 @@
 
       <form id="signupForm" class="space-y-4">
         <div>
-          <label for="name" class="block text-sm font-medium">Name</label>
+          <label for="name" class="block text-m font-bold">Name</label>
           <input
             type="text"
             id="name"
@@ -43,7 +43,7 @@
         </div>
 
         <div>
-          <label for="email" class="block text-sm font-medium">Email</label>
+          <label for="email" class="block text-m font-bold">Email</label>
           <input
             type="email"
             id="email"
@@ -54,9 +54,7 @@
         </div>
 
         <div>
-          <label for="password" class="block text-sm font-medium"
-            >Password</label
-          >
+          <label for="password" class="block text-m font-bold">Password</label>
           <div class="relative">
             <input
               type="password"
@@ -76,7 +74,7 @@
         </div>
 
         <div>
-          <label for="confirmPassword" class="block text-sm font-medium"
+          <label for="confirmPassword" class="block text-m font-bold"
             >Confirm Password</label
           >
           <div class="relative">
