enhancing the about page

--- a/public/about.html
+++ b/public/about.html
@@ -38,16 +38,7 @@
           <a href="/about.html" class="text-idcHighlight no-underline font-bold"
             >About</a
           >
-          <a
-            href="/#services"
-            class="text-idcPrimary no-underline hover:text-idcHighlight"
-            >Services</a
-          >
-          <a
-            href="/#projects"
-            class="text-idcPrimary no-underline hover:text-idcHighlight"
-            >Portfolio</a
-          >
+
           <a
             href="/#contact"
             class="text-idcPrimary no-underline hover:text-idcHighlight"
@@ -60,13 +51,41 @@
       </div>
     </header>
 
+    <!-- Hero Banner Section -->
+    <section
+      class="relative bg-cover bg-center h-[400px]"
+      style="background-image: url('/images/interior-bg.jpg')"
+    >
+      <div
+        class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center"
+      >
+        <div class="text-center text-white">
+          <h1 class="text-4xl font-bold mb-4">
+            Transforming Spaces, Inspiring Lives
+          </h1>
+          <p class="max-w-xl mx-auto mb-6">
+            Creating interiors that are as unique as your dreams, with a
+            commitment to quality and creativity.
+          </p>
+          <a
+            href="https://wa.me/254725790947?text=Hello%20Tiffi,%20I%20would%20like%20to%20get%20started!"
+            class="bg-idcHighlight text-idcBackground font-bold py-3 px-6 rounded-lg shadow-lg hover:bg-idcPrimary transition"
+            target="_blank"
+            >Get Started</a
+          >
+        </div>
+      </div>
+    </section>
+
     <!-- Hero Section -->
     <section class="py-16">
       <div
         class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-12"
       >
         <!-- Mission -->
-        <div class="text-center p-6 bg-idcBackground shadow-lg rounded-lg">
+        <div
+          class="text-center p-6 bg-idcBackground shadow-lg rounded-lg transition-transform hover:-translate-y-2 hover:shadow-2xl"
+        >
           <i class="fas fa-bullseye text-idcHighlight text-5xl mb-4"></i>
           <h2 class="text-xl font-bold text-idcPrimary mb-4">Our Mission</h2>
           <p>
@@ -76,7 +95,9 @@
         </div>
 
         <!-- Vision -->
-        <div class="text-center p-6 bg-idcBackground shadow-lg rounded-lg">
+        <div
+          class="text-center p-6 bg-idcBackground shadow-lg rounded-lg transition-transform hover:-translate-y-2 hover:shadow-2xl"
+        >
           <i class="fas fa-eye text-idcHighlight text-5xl mb-4"></i>
           <h2 class="text-xl font-bold text-idcPrimary mb-4">Our Vision</h2>
           <p>
@@ -86,60 +107,15 @@
         </div>
 
         <!-- Values -->
-        <div class="text-center p-6 bg-idcBackground shadow-lg rounded-lg">
+        <div
+          class="text-center p-6 bg-idcBackground shadow-lg rounded-lg transition-transform hover:-translate-y-2 hover:shadow-2xl"
+        >
           <i class="fas fa-handshake text-idcHighlight text-5xl mb-4"></i>
           <h2 class="text-xl font-bold text-idcPrimary mb-4">Our Values</h2>
           <p>
             Creativity, integrity, collaboration, and commitment to excellence
             in every project we undertake.
           </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Meet the Team -->
-    <section class="bg-idcAccent py-16">
-      <div class="container mx-auto px-6">
-        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
-          Meet Our Team
-        </h2>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-12">
-          <div class="text-center">
-            <img
-              src="/images/team-member1.jpg"
-              alt="Team Member"
-              class="w-32 h-32 rounded-full mx-auto shadow-lg mb-4 object-cover"
-            />
-            <h3 class="text-xl font-semibold text-idcPrimary">Jane Doe</h3>
-            <p class="text-sm text-idcText">Creative Director</p>
-          </div>
-          <div class="text-center">
-            <img
-              src="/images/team-member2.jpg"
-              alt="Team Member"
-              class="w-32 h-32 rounded-full mx-auto shadow-lg mb-4 object-cover"
-            />
-            <h3 class="text-xl font-semibold text-idcPrimary">John Smith</h3>
-            <p class="text-sm text-idcText">Lead Designer</p>
-          </div>
-          <div class="text-center">
-            <img
-              src="/images/team-member3.jpg"
-              alt="Team Member"
-              class="w-32 h-32 rounded-full mx-auto shadow-lg mb-4 object-cover"
-            />
-            <h3 class="text-xl font-semibold text-idcPrimary">Alice Lee</h3>
-            <p class="text-sm text-idcText">Project Manager</p>
-          </div>
-          <div class="text-center">
-            <img
-              src="/images/team-member4.jpg"
-              alt="Team Member"
-              class="w-32 h-32 rounded-full mx-auto shadow-lg mb-4 object-cover"
-            />
-            <h3 class="text-xl font-semibold text-idcPrimary">Michael Brown</h3>
-            <p class="text-sm text-idcText">Interior Consultant</p>
-          </div>
         </div>
       </div>
     </section>
@@ -182,6 +158,137 @@
             </p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- History Section -->
+    <section class="bg-idcAccent py-16">
+      <div class="container mx-auto px-6">
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
+          Our History
+        </h2>
+        <p class="text-center max-w-3xl mx-auto">
+          Founded in 2010, Interiors By Tifi Limited has grown from a small
+          design studio into one of Kenya's leading interior design firms. Our
+          passion for design, attention to detail, and commitment to excellence
+          have earned us a reputation for creating breathtaking spaces.
+        </p>
+      </div>
+    </section>
+
+    <!-- Client Testimonials Section -->
+    <section class="py-16">
+      <div class="container mx-auto px-6">
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
+          Client Testimonials
+        </h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+          <div class="bg-idcBackground p-6 rounded-lg shadow-lg text-center">
+            <p class="italic mb-4">
+              "Tifi Interiors completely transformed our living room into a
+              beautiful and functional space. Highly recommended!"
+            </p>
+            <h4 class="font-semibold text-idcPrimary">- Sarah W.</h4>
+            <p class="text-sm text-idcText">
+              Project: Residential Living Room Design
+            </p>
+            <div class="flex justify-center mt-3">
+              <i class="fas fa-star text-yellow-500"></i>
+              <i class="fas fa-star text-yellow-500"></i>
+              <i class="fas fa-star text-yellow-500"></i>
+              <i class="fas fa-star text-yellow-500"></i>
+              <i class="fas fa-star-half-alt text-yellow-500"></i>
+            </div>
+          </div>
+          <div class="bg-idcBackground p-6 rounded-lg shadow-lg text-center">
+            <p class="italic mb-4">
+              "Their creativity and attention to detail made our office
+              renovation a seamless experience."
+            </p>
+            <h4 class="font-semibold text-idcPrimary">- Daniel M.</h4>
+            <p class="text-sm text-idcText">
+              Project: Corporate Office Renovation
+            </p>
+            <div class="flex justify-center mt-3">
+              <i class="fas fa-star text-yellow-500"></i>
+              <i class="fas fa-star text-yellow-500"></i>
+              <i class="fas fa-star text-yellow-500"></i>
+              <i class="fas fa-star text-yellow-500"></i>
+              <i class="fas fa-star text-yellow-500"></i>
+            </div>
+          </div>
+          <div class="bg-idcBackground p-6 rounded-lg shadow-lg text-center">
+            <p class="italic mb-4">
+              "From concept to completion, Tifi Interiors exceeded our
+              expectations at every step."
+            </p>
+            <h4 class="font-semibold text-idcPrimary">- Grace K.</h4>
+            <p class="text-sm text-idcText">
+              Project: High-End Retail Store Design
+            </p>
+            <div class="flex justify-center mt-3">
+              <i class="fas fa-star text-yellow-500"></i>
+              <i class="fas fa-star text-yellow-500"></i>
+              <i class="fas fa-star text-yellow-500"></i>
+              <i class="fas fa-star-half-alt text-yellow-500"></i>
+              <i class="far fa-star text-yellow-500"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Client Journey Section -->
+    <section class="bg-idcAccent py-16">
+      <div class="container mx-auto px-6">
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
+          Client Journey
+        </h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+          <div class="text-center p-6 bg-idcBackground shadow-lg rounded-lg">
+            <i class="fas fa-lightbulb text-idcHighlight text-5xl mb-4"></i>
+            <h3 class="text-xl font-semibold mb-2">Consultation</h3>
+            <p>
+              We begin by understanding your vision and requirements through an
+              in-depth consultation.
+            </p>
+          </div>
+          <div class="text-center p-6 bg-idcBackground shadow-lg rounded-lg">
+            <i class="fas fa-pencil-ruler text-idcHighlight text-5xl mb-4"></i>
+            <h3 class="text-xl font-semibold mb-2">Design</h3>
+            <p>
+              Our design team creates personalized solutions tailored to your
+              space and lifestyle.
+            </p>
+          </div>
+          <div class="text-center p-6 bg-idcBackground shadow-lg rounded-lg">
+            <i class="fas fa-couch text-idcHighlight text-5xl mb-4"></i>
+            <h3 class="text-xl font-semibold mb-2">Execution</h3>
+            <p>
+              We bring your vision to life with high-quality craftsmanship and
+              meticulous attention to detail.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Call to Action Section -->
+    <section class="bg-idcAccent py-16">
+      <div class="container mx-auto px-6 text-center">
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6">
+          Ready to Transform Your Space?
+        </h2>
+        <p class="max-w-2xl mx-auto mb-8">
+          Let Interiors By Tifi Limited bring your design vision to life.
+          Contact us today to get started on creating a space you'll love.
+        </p>
+        <a
+          href="https://wa.me/254725790947?text=Hello%20Tiffi,%20I%20would%20like%20to%20get%20started!"
+          class="bg-idcHighlight text-idcBackground font-bold py-3 px-6 rounded-lg shadow-lg hover:bg-idcPrimary transition"
+          target="_blank"
+          >Get in Touch</a
+        >
       </div>
     </section>
 
