--- a/public/checkout.html
+++ b/public/checkout.html
@@ -30,7 +30,7 @@
         Checkout (<span class="js-cart-quantity">3</span> items)
       </div>
       <div>
-        <img src="/images/icons/checkout-lock-icon.png" alt="Secure Checkout" />
+        <img src="/images/checkout-lock-icon.jpg" alt="Secure Checkout" />
       </div>
     </div>
 
