--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
         <!-- Navigation Links with Font Awesome icons -->
         <nav id="mobile-nav" class="hidden md:flex space-x-8">
-          <a href="#about" class="hover:text-idcHighlight">
+          <a href="/about.html" class="hover:text-idcHighlight">
             <i class="fas fa-info-circle mr-2"></i>About
           </a>
           <a href="#services" class="hover:text-idcHighlight">
