fixing the mobile menu

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,11 @@
           </button>
 
           <!-- Mobile Menu Button -->
-          <button id="mobile-menu" class="md:hidden" aria-expanded="false">
+          <button
+            id="mobile-menu"
+            class="block md:hidden"
+            aria-expanded="false"
+          >
             <i class="fas fa-bars text-idcPrimary text-xl"></i>
           </button>
 
@@ -444,6 +448,7 @@
                 <a
                   href="mailto:info@interiorsbytifi.co.ke"
                   class="hover:underline text-idcHighlight"
+                  target="_blank"
                   >info@interiorsbytifi.co.ke</a
                 ></span
               >
@@ -466,6 +471,7 @@
                 <a
                   href="https://www.instagram.com/interiorsbytifi"
                   class="hover:underline text-idcHighlight"
+                  target="_blank"
                   >interiorsbytifi</a
                 ></span
               >
@@ -475,9 +481,10 @@
               <span
                 >Facebook:
                 <a
-                  href="tel:+254 725 790947"
+                  href="https://web.facebook.com/Interiorsbytifiltd"
                   class="hover:underline text-idcHighlight"
-                  >+254 725 790947</a
+                  target="_blank"
+                  >Interiorsbytifiltd</a
                 ></span
               >
             </div>
