smooth scroling on products page

--- a/public/products.html
+++ b/public/products.html
@@ -101,7 +101,7 @@
             <p class="mb-6">Discover premium quality beddings for your home.</p>
             <div class="flex space-x-4">
               <a
-                href="/beddings.html"
+                href="#beddings"
                 class="bg-idcHighlight text-black px-4 py-2 rounded-md font-semibold"
                 >Shop Now</a
               >
@@ -126,7 +126,7 @@
             <p class="mb-6">Upgrade your space with our exclusive furniture.</p>
             <div class="flex space-x-4">
               <a
-                href="/furniture.html"
+                href="#furniture"
                 class="bg-idcHighlight text-black px-4 py-2 rounded-md font-semibold"
                 >Shop Now</a
               >
@@ -151,7 +151,7 @@
             <p class="mb-6">Find curtains that bring your vision to life.</p>
             <div class="flex space-x-4">
               <a
-                href="/curtains.html"
+                href="#decor"
                 class="bg-idcHighlight text-black px-4 py-2 rounded-md font-semibold"
                 >Shop Now</a
               >
