--- a/public/products.html
+++ b/public/products.html
@@ -56,7 +56,7 @@
             <i class="fas fa-shopping-cart text-idcPrimary text-2xl"></i>
             <span
               id="cart-count"
-              class="absolute top-0 right-0 bg-idcHighlight text-black text-xs rounded-full px-2 py-1 hidden"
+              class="js-cart-quantity absolute top-0 right-0 bg-idcHighlight text-black text-xs rounded-full px-2 py-1 hidden"
               >0</span
             >
           </a>
