fixing the checkout page

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -30,7 +30,13 @@
         Checkout (<span class="js-cart-quantity">3</span> items)
       </div>
       <div>
-        <img src="/images/checkout-lock-icon.jpg" alt="Secure Checkout" />
+        <div class="flex items-center ml-4">
+          <img
+            src="/images/checkout-lock-icon.jpg"
+            alt="Secure Checkout"
+            class="h-6 md:h-8 object-contain"
+          />
+        </div>
       </div>
     </div>
 
